# aurora_xrdc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  buildappimage.sh  dev.sh  req.sh  requirement.sh  run.sh  test.sh  tmp_vnc11_check.sh
doc/: common_mistakes.md  overview.md  update.md  vibetask.md
src/: annexb.rs  app.rs  audio.rs  audio_streamer.rs  camera.rs  client_manager.rs  clipboard.rs  ffmpeg.rs  main.rs  media.rs  messages.rs  rtc.rs  session.rs  settings.rs  streamer.rs  system_stats.rs  transport.rs  uinput.rs  webtransport.rs  x11_input.rs
utils/: configure_d11base_lxc.sh  remove_virtual_audio_devices.sh  reset_audio_services.sh  startdev.sh  startrun.sh
web/: app.css  app.js  index.html  manifest.webmanifest  sw.js  video_renderer_worker.js
