[package]
name = "vibe_rdesk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["multipart", "ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
bytes = "1.10"
futures-util = "0.3"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.5"
sysinfo = "0.37"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4"] }
x11rb = { version = "0.13", features = ["xtest"] }

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
panic = "abort"
